--- a/detalle_boleta_perfulandia/src/main/resources/application.properties
+++ b/detalle_boleta_perfulandia/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-springdoc.swagger-ui.path=/ppp
+springdoc.swagger-ui.path=/docs
