--- a/pedido_perfulandia/pom.xml
+++ b/pedido_perfulandia/pom.xml
@@ -65,14 +65,18 @@
 		    <artifactId>datafaker</artifactId>
 		    <version>2.4.2</version>
 	   </dependency>
-	   <dependency> 
-			<groupId>org.springdoc</groupId> 
-			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId> 
-			<version>2.6.0</version> 
-	   </dependency>
+	   <dependency>
+	      <groupId>org.springdoc</groupId>
+	      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+	      <version>2.8.9</version>
+   	   </dependency>
 			   <dependency>
 		    <groupId>org.hibernate.validator</groupId>
 		    <artifactId>hibernate-validator</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-hateoas</artifactId>
 		</dependency>
 	</dependencies>
 
