--- a/envio_perfulandia/src/main/resources/application.properties
+++ b/envio_perfulandia/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=envio_perfulandia
 
-server.port=8089
+server.port=8095
 
 spring.datasource.url=jdbc:mysql://localhost:3306/enviodb
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+springdoc.swagger-ui.path=/ArgEnvio
+
 spring.jpa.show-sql=true
