--- a/empleado_perfulandia/pom.xml
+++ b/empleado_perfulandia/pom.xml
@@ -75,6 +75,21 @@
 		    <artifactId>datafaker</artifactId>
 		    <version>2.4.2</version>
 	   </dependency>
+	     <!-- Aca hasta el 86-->
+       <dependency>
+	      <groupId>org.springdoc</groupId>
+	      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+	      <version>2.8.9</version>
+   	   </dependency>
+   	   <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
