Actualizacion del microservicio pedido
he actualizado el microservicio del pedido para que verifique el inventario si contiene unidades del producto suficiente al pedido

--- a/api_perfulandia/src/main/resources/application.yml
+++ b/api_perfulandia/src/main/resources/application.yml
@@ -58,3 +58,11 @@ spring:
           - Path=/api/inventario/**
           filters:
           -  RewritePath=/api/inventario/(?<segmento>.*), /inventario/${segmento}
+
+        - id: detalle_pedido
+          uri:
+            http://localhost:8085
+          predicates:
+          - Path=/api/detalle_pedido/**
+          filters:
+          - RewritePath=/api/detalle_pedido/(?<segmento>.*), /detalle_pedido/${segmento}
