Cambio de links de la ARGU
Se cambiaron los links que se usan en la documentacion del codigo, nuevo link seria /docs

--- a/envio_perfulandia/src/main/resources/application.properties
+++ b/envio_perfulandia/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-springdoc.swagger-ui.path=/ArgEnvio
+springdoc.swagger-ui.path=/docs
 
 spring.jpa.show-sql=true
