--- a/detalle_pedido_perfulandia/src/main/resources/application.properties
+++ b/detalle_pedido_perfulandia/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-springdoc.swagger-ui.path=/ArgDetallePedido
+springdoc.swagger-ui.path=/docs
