--- a/empleado_perfulandia/src/main/resources/application.properties
+++ b/empleado_perfulandia/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-springdoc.swagger-ui.path=/ArgEmple
+springdoc.swagger-ui.path=/docs
 
 dataloader.habilidado=false
