--- a/pedido_perfulandia/src/main/resources/application.properties
+++ b/pedido_perfulandia/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-springdoc.swagger-ui.path=/ArgPedido
+springdoc.swagger-ui.path=/docs
