--- a/pedido_perfulandia/src/main/resources/application.properties
+++ b/pedido_perfulandia/src/main/resources/application.properties
@@ -9,3 +9,22 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 springdoc.swagger-ui.path=/docs
+
+
+# Guarda los logs en un archivo
+logging.file.name=logs/app.log
+
+# Nivel de log deseado (puede ser DEBUG, INFO, WARN, ERROR)
+logging.level.root=INFO
+
+
+# Formato de salida (opcional)
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+
+# Nivel de log para SQL
+logging.level.org.hibernate.SQL=DEBUG
+
+# Para ver también los parámetros de las consultas
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
