--- a/api_perfulandia/pom.xml
+++ b/api_perfulandia/pom.xml
@@ -43,6 +43,11 @@
 		  <groupId>org.springframework.cloud</groupId>
 		  <artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+		    <version>2.5.0</version>
+		</dependency>
 
 
 		<dependency>
