--- a/producto_perfulandia/pom.xml
+++ b/producto_perfulandia/pom.xml
@@ -82,6 +82,16 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-hateoas</artifactId>
 		</dependency>
+		<dependency>
+	        <groupId>org.mockito</groupId>
+	        <artifactId>mockito-core</artifactId>
+	        <scope>test</scope>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.mockito</groupId>
+	        <artifactId>mockito-junit-jupiter</artifactId>
+	        <scope>test</scope>
+	    </dependency>
 	</dependencies>
 	
 	<build>
